force-app/main/default/objects/User/fields/AcctSeed__Default_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Billing_Rate__c</fullName>
    <label>Default Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>