force-app/main/default/objects/User/fields/Business_Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Office_Manager__c</fullName>
    <description>User&#39;s designated Business Office Manager</description>
    <label>Business Office Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Business Office Managers</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Retail Memory Making Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>Business_Office_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>