force-app/main/default/objects/User/fields/Commission_Gross_Margin_Manager__c.field-meta.xml
<CustomField>
    <fullName>Commission_Gross_Margin_Manager__c</fullName>
    <label>Commission Gross Margin Manager</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>