force-app/main/default/objects/User/fields/Commission_Gross_Margin_Percent_Override__c.field-meta.xml
<CustomField>
    <fullName>Commission_Gross_Margin_Percent_Override__c</fullName>
    <label>Commission Gross Margin Percent Override</label>
    <precision>15</precision>
    <scale>12</scale>
    <type>Percent</type>
</CustomField>