force-app/main/default/objects/User/fields/Commission_Manager_Business_Office__c.field-meta.xml
<CustomField>
    <fullName>Commission_Manager_Business_Office__c</fullName>
    <description>Manager of the business office gets this percentage.</description>
    <label>Commission Manager Business Office</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>