force-app/main/default/objects/User/fields/Receives_Commission__c.field-meta.xml
<CustomField>
    <fullName>Receives_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receives Commission</label>
    <type>Checkbox</type>
</CustomField>