force-app/main/default/objects/User/fields/Sales_Department__c.field-meta.xml
<CustomField>
    <fullName>Sales_Department__c</fullName>
    <label>Sales_Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barrie</fullName>
            </value>
            <value>
                <fullName>Whitefish</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>